--- a/RAMIREZ_PA2.ipynb
+++ b/RAMIREZ_PA2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "34f1dea5-0eb6-4f71-93d0-1e08064123d6",
    "metadata": {},
    "outputs": [
@@ -19,18 +19,18 @@
      "output_type": "stream",
      "text": [
       "Variables: \n",
-      " [[0.51195736 0.03349277 0.18071416 0.73948601 0.32503554]\n",
-      " [0.37425041 0.16750528 0.60702785 0.5979198  0.53532739]\n",
-      " [0.34860584 0.81808228 0.11202814 0.0876128  0.37118605]\n",
-      " [0.27747321 0.68342395 0.7372545  0.96197992 0.97168009]\n",
-      " [0.86775491 0.47933346 0.78602202 0.59767479 0.35490207]]\n",
+      " [[0.38320141 0.78434572 0.59212546 0.96534703 0.800955  ]\n",
+      " [0.51033724 0.48351184 0.76107414 0.41013179 0.20691759]\n",
+      " [0.76115595 0.29960103 0.81853596 0.8391078  0.5963912 ]\n",
+      " [0.73388616 0.81499738 0.74551187 0.76282574 0.18518   ]\n",
+      " [0.59225675 0.03675963 0.06485202 0.21719796 0.07226402]]\n",
       "\n",
       "Normalized: \n",
-      " [[ 0.03997572 -1.72318163 -1.18066608  0.87842612 -0.64883717]\n",
-      " [-0.4674788  -1.22934122  0.39031352  0.35675009  0.12609503]\n",
-      " [-0.56197985  1.16805587 -1.43377627 -1.52374757 -0.47877105]\n",
-      " [-0.82410589  0.6718356   0.87020293  1.69832328  1.73406872]\n",
-      " [ 1.35110112 -0.08024438  1.04991279  0.3558472  -0.53877806]]\n"
+      " [[-0.5555759   0.88844275  0.19649814  1.54000197  0.94823198]\n",
+      " [-0.09791888 -0.19448355  0.80467091 -0.4586333  -1.19015332]\n",
+      " [ 0.80496543 -0.85651623  1.01151901  1.08557246  0.21185374]\n",
+      " [ 0.70680102  0.99878103  0.74865067  0.81097623 -1.26840319]\n",
+      " [ 0.19697078 -1.80267921 -1.70155366 -1.15314656 -1.67487232]]\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
     "np.save('X_normalized.npy', normalized)\n",
     "\n",
     "print(\"Variables: \\n\", X)\n",
-    "print(\"\\nNormalized: \\n\", normalized)"
+    "print(\"\\nNormalized: \\n\", np.load('X_normalized.npy'))"
    ]
   },
   {
@@ -58,49 +58,7 @@
    "id": "e27e03cb-13af-408f-9be0-b04b29e606fa",
    "metadata": {},
    "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "903e1d0b-b924-41c5-99ca-0bf8a136a633",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variables: \n",
-      " [[0.77997845 0.57631941 0.90950181 0.41996053 0.46926526]\n",
-      " [0.90612893 0.63167084 0.74439752 0.24894489 0.93134515]\n",
-      " [0.06029462 0.24623076 0.79209061 0.77872341 0.66561255]\n",
-      " [0.68205227 0.59397946 0.72165453 0.66949743 0.0924266 ]\n",
-      " [0.33895407 0.75510945 0.40966394 0.62681678 0.41922148]]\n",
-      "\n",
-      "Normalized: \n",
-      " [[0.82622512 0.59241659 0.97492299 0.4129105  0.46951425]\n",
-      " [0.9710508  0.6559622  0.78537683 0.21657786 1.        ]\n",
-      " [0.         0.21346194 0.84013036 0.82478429 0.6949286 ]\n",
-      " [0.71380204 0.61269102 0.75926699 0.6993886  0.03688877]\n",
-      " [0.31991191 0.79767454 0.40108961 0.65038955 0.41206204]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Step 1: Create a random 5x5 ndarray\n",
-    "X = np.random.rand(5, 5)\n",
-    "\n",
-    "# Step 2: Normalize X\n",
-    "X_normalized = (X - np.min(X)) / (np.max(X) - np.min(X))\n",
-    "\n",
-    "# Step 3: Save the normalized ndarray\n",
-    "np.save('X_normalized.npy', X_normalized)\n",
-    "\n",
-    "print(\"Variables: \\n\", X)\n",
-    "print(\"\\nNormalized: \\n\", X_normalized)"
+    "  "
    ]
   },
   {
@@ -113,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "6782b2ce-8d04-4798-9c9d-5987ca5a7534",
    "metadata": {},
    "outputs": [
@@ -143,17 +101,16 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "#Create the following 10 x 10 ndarray.\n",
-    "a = s.reshape(10, 10)\n",
-    "\n",
-    "# squares of the first 100 positive integers\n",
+    "# squares of the first 100 positive integers.\n",
     "n = np.arange(1, 101)\n",
     "s = n ** 2\n",
     "\n",
+    "#Create the following 10 x 10 ndarray.\n",
+    "a = s.reshape(10, 10)\n",
     "#All the elements that are divisible by 3.\n",
     "divisible_by_3 = s[s % 3 == 0]\n",
     "\n",
-    "#Save the result as div_by_3.npy\n",
+    "#Save the result as div_by_3.npy.\n",
     "np.save('div_by_3.npy', divisible_by_3)\n",
     "\n",
     "print(\"10x10 array: \\n\", a) \n",
@@ -163,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28ff473-ad8d-4c44-9aea-7796c9735b33",
+   "id": "b5c23a82-9e38-470b-94fb-b934aa6f091f",
    "metadata": {},
    "outputs": [],
    "source": []
