--- a/EXP 2/RAMIREZ_PA2.ipynb
+++ b/EXP 2/RAMIREZ_PA2.ipynb
@@ -115,7 +115,7 @@
     "#Save the result as div_by_3.npy.\n",
     "np.save('div_by_3.npy', b)\n",
     "\n",
-    "print(\"10x10 array: \\n\", a) \n",
+    "print(\"10x10 array of Square integers: \\n\", a) \n",
     "print(\"\\nNumbers Divisible by 3: \\n\", np.load('div_by_3.npy'))"
    ]
   },
